deploy/kubernates/jobcron.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: cron
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: cron
        revision: "20180829001"
    spec:
      containers:
      - name: cron
        image: gcr.io/the5thfloorinc/mastodon:production
        imagePullPolicy: Always
        volumeMounts:
        - mountPath: /etc/crontabs
          name: cron-root
          readOnly: true
        command:
        - crond
        - -f
      volumes:
      - name: cron-root
        configMap:
          name: cron-root
