deploy/kubernates/sidekiq.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: sidekiq
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: sidekiq
    spec:
      containers:
      - name: web
        image: gcr.io/the5thfloorinc/mastodon:production
        imagePullPolicy: Always
        resources:
          limits:
            cpu: 500m
          requests:
            cpu: 50m
        command: ["bundle", "exec", "sidekiq", "-q", "default", "-q", "mailers", "-q", "pull", "-q", "push"]
