deploy/kubernates/backend.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: db-host
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: db-host
    spec:
      containers:
      - image: b.gcr.io/cloudsql-docker/gce-proxy
        name: db-host
        command:
        - /cloud_sql_proxy
        - -dir=/cloudsql
        - -instances=the5thfloorinc:asia-northeast1:mastodon-5thfloor=tcp:0.0.0.0:5432
        - -credential_file=/credentials/credentials.json
        ports:
        - name: mastodon-sql
          containerPort: 5432
        volumeMounts:
        - mountPath: /cloudsql
          name: cloudsql
        - mountPath: /etc/ssl/certs
          name: ssl-certs
          readOnly: true
        - mountPath: /credentials
          name: service-account-token
      volumes:
      - name: cloudsql
        emptyDir:
      - name: ssl-certs
        hostPath:
          path: "/etc/ssl/certs"
      - name: service-account-token
        secret:
          secretName: service-account-token
---
apiVersion: v1
kind: Service
metadata:
  name: db-host
spec:
  type: ClusterIP
  ports:
  - port: 5432
    targetPort: mastodon-sql
  selector:
    app: db-host
