deploy/kubernates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mastodon
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "mastodon-5thfloor"
    networking.gke.io/managed-certificates: ichiji-social-certificate
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - host: ichiji.social
    http:
      paths:
      - path: /*
        backend:
          serviceName: frontend
          servicePort: 80
