deploy/kubernates/sidekiq-exporter.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: sidekiq-exporter
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: sidekiq-exporter
        revision: "20190307001"
    spec:
      containers:
      - name: web
        image: gcr.io/the5thfloorinc/sidekiq-exporter
        imagePullPolicy: Always
        resources:
          limits:
            cpu: 10m
            memory: 64Mi
          requests:
            cpu: 10m
            memory: 64Mi
        ports:
        - containerPort: 9292
---
apiVersion: v1
kind: Service
metadata:
  name: sidekiq-exporter
  labels:
    app: sidekiq-exporter
  annotations:
    service.beta.kubernetes.io/external-traffic: OnlyLocal
spec:
  type: NodePort
  externalTrafficPolicy: Local
  ports:
  - name: http
    port: 80
    targetPort: 9292
  selector:
    app: sidekiq-exporter

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sidekiq-exporter
spec:
  backend:
    serviceName: sidekiq-exporter
    servicePort: 80
